  * gRPC client config: when trust store is not specified, user can choose default one as JDK or TrustAll
  * IdleEventMonitor only start when the param threshold > 0
  * log refactoring: make HTTP server and gRPC server status log triggered by pool size change when log.trace is enabled




\-- release 2.6.1

  * Fixed all legacy GitHub CodeQL alerts and security issues.

  * Fixed all legacy GitHub Codacy Security Scan reported issues.

  * Improved security - configuration behavior changed as below of HttpClientConfig, GRPCClientConfig, MqttClientConfig and AuthConfig (cfg_auth.propertie)
    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
    2. Keystore: Use JDK default keystore if not specified, behavior of using 'plaintext no SSL/TLS' has been removed.
    3. Truststore: Use JDK default truststore if not specified, behavior of using `TrustManager` that accepts all certificates has been removed.

  * Improved security - configuration behavior of NioConfig
    1. TLS protocol: Use plaintext no SSL/TLS if TLS protocol is configured as blank or empty string.
    2. Keystore: Required when TLS protocol is configured, otherwise throw IllegalStateException if not specified.

  * Enhanced security: Replaced `secpr5121` with `secp256r1` for default `ECGenParameterSpec`.

  * Enhanced security: Fixed the use of a cryptographic algorithm with insufficient key size - Threw `InvalidAlgorithmParameterException` when using a cryptographic algorithm with insufficient key size to call `EncryptorUtil.generateKeyPair()`.

  * Enhanced security: Fixed polynomial regular expression used on uncontrolled data (`FormatterUtil`).

  * Enhanced error handling: `PathParm` with regex inside URL will return `400 Bad Request` when regex does not match.

  * Enhanced logging: Logged detailed information and stack trace for health check failure.

  * Enhanced logging: Netty channel handler exception will be logged only when:
